==> 8bitgeek/caribou-rtos/caribou/target/chip/stm32/stm32f746/src/uart.c <==
#include <caribou/kernel/interrupt.h>
#include <caribou/lib/stdio.h>
#include <caribou/lib/errno.h>
#include <caribou/lib/heap.h>
#include <caribou/lib/string.h>
#include <chip/chip.h>
#include <chip/uart.h>
#include <board.h>
#include <stm32f7xx.h>
#include <stm32f7xx_hal_gpio.h>
#include <stm32f7xx_hal_uart.h>
#include <stm32f7xx_hal_rcc.h>
#include <stm32f7xx_hal_dma.h>

int chip_uart_int_enable(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	int rc = chip_uart_int_enabled(private_device);
	private_device->base_address->CR1 |= chip_uart_interrupt_mask(private_device);
	return rc;
}

int chip_uart_int_disable(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	int rc = chip_uart_int_enabled(private_device);
   	private_device->base_address->CR1 &= ~chip_uart_interrupt_mask(private_device);
	return rc;
}

int chip_uart_int_enabled(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	int rc = (private_device->base_address->CR1 & chip_uart_interrupt_mask(private_device)) ? 1 : 0;
	return rc;
}

int chip_uart_set_config(void* device,caribou_uart_config_t* config)
{
	int rc=(-1);
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	uart_disable(device);
	if ( config )
	{
		USART_HandleTypeDef USART_HandleStructure;

		memcpy(&private_device->config,config,sizeof(caribou_uart_config_t));
		memset(&USART_HandleStructure,0,sizeof(USART_HandleTypeDef));

		USART_HandleStructure.Instance = private_device->base_address;
		USART_HandleStructure.Init.BaudRate = (int)config->baud_rate;
		USART_HandleStructure.Init.WordLength = (int)config->word_size;

		switch ( config->word_size )
		{
			default:
			case CARIBOU_UART_WORDSIZE_5:				/* Word size 5 bits */
			case CARIBOU_UART_WORDSIZE_6:				/* Word size 6 bits */
			case CARIBOU_UART_WORDSIZE_7:				/* Word size 7 bits */
			case CARIBOU_UART_WORDSIZE_8:				/* Word size 8 bits */
				USART_HandleStructure.Init.WordLength = USART_WORDLENGTH_8B;
				break;
			case CARIBOU_UART_WORDSIZE_9:				/* Word size 9 bits */		
				USART_HandleStructure.Init.WordLength = USART_WORDLENGTH_9B;
				break;
		}

		switch ( config->stop_bits )
		{
			case CARIBOU_UART_STOPBITS_05:
				//USART_HandleStructure.Init.StopBits = USART_StopBits_0_5;
				//break;
			default:
			case CARIBOU_UART_STOPBITS_1:
				USART_HandleStructure.Init.StopBits = USART_STOPBITS_1;
				break;
			case CARIBOU_UART_STOPBITS_15:
				USART_HandleStructure.Init.StopBits = USART_STOPBITS_1_5;
				break;
			case CARIBOU_UART_STOPBITS_2:
				USART_HandleStructure.Init.StopBits = USART_STOPBITS_2;
				break;
		}

		switch( config->parity_bits )
		{
			default:
			case CARIBOU_UART_PARITY_NONE:
				USART_HandleStructure.Init.Parity = USART_PARITY_NONE;
				break;
			case CARIBOU_UART_PARITY_ODD:
				USART_HandleStructure.Init.Parity = USART_PARITY_ODD;
				break;
			case CARIBOU_UART_PARITY_EVEN:
				USART_HandleStructure.Init.Parity = USART_PARITY_EVEN;
				break;
		}

		USART_HandleStructure.Init.Mode = USART_MODE_TX_RX;

		// USART_Init(private_device->base_address, &USART_HandleStructure.Init);

		USART_SetConfig(&USART_HandleStructure);
		private_device->base_address->CR2 &= ~USART_CR2_CLKEN;

		switch( config->flow_control )
		{
			default:
			case CARIBOU_UART_FLOW_NONE:		/* no flow control */
				private_device->base_address->CR3 &= ~USART_CR3_CTSE;
				private_device->base_address->CR3 &= ~USART_CR3_RTSE;
				break;
			case CARIBOU_UART_FLOW_RTS:			/* RTS flow control */
			case CARIBOU_UART_FLOW_RS485:
				private_device->base_address->CR3 &= ~USART_CR3_CTSE;
				private_device->base_address->CR3 |= USART_CR3_RTSE;
				break;
			case CARIBOU_UART_FLOW_CTS:			/* CTS flow control */
				private_device->base_address->CR3 |= USART_CR3_CTSE;
				private_device->base_address->CR3 &= ~USART_CR3_RTSE;
				break;
			case CARIBOU_UART_FLOW_RTS_CTS:		/* RTS+CTS flow control */
				private_device->base_address->CR3 |= USART_CR3_CTSE;
				private_device->base_address->CR3 |= USART_CR3_RTSE;
				break;
		}

		uart_enable(device);

		if ( config->dma_mode != CARIBOU_UART_DMA_NONE )
		{
			/* dma channel(s) priority */
			switch( config->dma_prio )
			{
				case CARIBOU_UART_DMA_PRIO_DEFAULT:	
					break;
				case CARIBOU_UART_DMA_PRIO_LOW:		
					private_device->rx.dma_prio = DMA_PRIORITY_LOW;			
					break;
				case CARIBOU_UART_DMA_PRIO_MEDIUM:	
					private_device->rx.dma_prio = DMA_PRIORITY_MEDIUM;		
					break;
				case CARIBOU_UART_DMA_PRIO_HIGH:	
					private_device->rx.dma_prio = DMA_PRIORITY_HIGH;		
					break;
				case CARIBOU_UART_DMA_PRIO_HIGHEST:	
					private_device->rx.dma_prio = DMA_PRIORITY_VERY_HIGH;	
					break;
			}
			caribou_vector_disable(private_device->vector);
           	private_device->base_address->CR1 &= ~chip_uart_interrupt_mask(private_device);
			if ( config->dma_mode & CARIBOU_UART_DMA_RX )
			{
				chip_uart_enable_dma_rx(private_device);
			}
			if ( config->dma_mode & CARIBOU_UART_DMA_TX )
			{
				chip_uart_enable_dma_tx(private_device);
			}
		}
		caribou_vector_install(private_device->vector,isr_uart,private_device);
		caribou_vector_enable(private_device->vector);
       	private_device->base_address->CR1 |= chip_uart_interrupt_mask(private_device);
		rc=0;
	}
	return rc;
}

bool chip_uart_tx_busy(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	bool rc = (private_device->base_address->ISR & USART_ISR_TC) ? false : true;
	return rc;
}

bool chip_uart_tx_ready(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
  bool rc = (private_device->base_address->ISR & USART_ISR_TXE) ? true : false;
	return rc;
}

bool chip_uart_rx_ready(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
  return (private_device->base_address->ISR & USART_ISR_RXNE) ? true : false;
}

void chip_uart_tx_start(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	if ( private_device->config.flow_control & CARIBOU_UART_FLOW_RS485_GPIO )
	{
		caribou_gpio_set(private_device->config.gpio);
	}
	private_device->base_address->CR1 |= USART_CR1_TXEIE;
}

void chip_uart_tx_stop(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	/*
	 ** NOTE ON RS485: We want to wait until the last byte is completely transmitted
	 ** before we release the TX/RX gate. This means we have to spin-wait 
	 ** for the last bytes to finish. This is obviously sub-optimal when called
	 ** from an interrupt handler.
	 */
	if ( private_device->config.flow_control & CARIBOU_UART_FLOW_RS485_GPIO )
	{
		while ( chip_uart_tx_busy(device) );
		caribou_gpio_reset(private_device->config.gpio);
	}
	private_device->base_address->CR1 &= ~USART_CR1_TXEIE;
}

void isr_uart(InterruptVector vector,void* arg)
{
	chip_uart_private_t* device = (chip_uart_private_t*)arg; // private device passed as isr argument
	if ( device->vector == vector )
	{
		// Empty out the UART receiver..
		while ( !device->rx.dma_enabled && chip_uart_rx_ready(device) )
		{
			if ( !caribou_bytequeue_put(device->rx.queue,chip_uart_rx_data(device) ) )
			{
				device->status |= STDIO_STATE_RX_OVERFLOW;
			}
			device->status |= STDIO_STATE_RX_PENDING;
		}
		// While transmitter empty and tx queue has data, then transmit...
		while ( !caribou_bytequeue_empty(device->tx.queue) && chip_uart_tx_ready(device) )
		{
			chip_uart_tx_data(device,caribou_bytequeue_get(device->tx.queue));
		}
		// Disable transmitter empty interrupts so we don't re-enter the interrupt handler.
		if ( caribou_bytequeue_empty(device->tx.queue) )
		{
			chip_uart_tx_stop(device);
		}
		device->base_address->ICR = USART_ICR_ORECF; // clear the overrun flag 
	}
}
