==> 8bitgeek/caribou-rtos/target/chip/stellaris/lm3s8962/src/uart.c <==
#include <caribou/lib/stdio.h>
#include <caribou/lib/errno.h>
#include <caribou/lib/heap.h>
#include <caribou/lib/string.h>
#include <caribou/kernel/interrupt.h>
#include <chip/chip.h>
#include <chip/uart.h>
#include <board.h>
#include <inc/lm3s8962.h>
#include <inc/hw_types.h>
#include <inc/hw_sysctl.h>
#include <inc/hw_nvic.h>
#include <inc/hw_memmap.h>
#include <inc/hw_uart.h>
#include <inc/hw_gpio.h>
#include <inc/hw_ints.h>
#include <driverlib/sysctl.h>
#include <driverlib/gpio.h>
#include <driverlib/uart.h>
#include <driverlib/pin_map.h>
#define UART_INTERRUPT_MASK (UART_INT_RX | UART_INT_RT)
#define FIFO_LEVEL_INTS  (UART_FIFO_RX4_8 | UART_FIFO_TX1_8)
#define FIFO_ENABLED UART_LCRH_FEN

int chip_uart_int_enable(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	int rc = chip_uart_int_enabled(private_device);
	HWREG(private_device->base_address + UART_O_IM) |= UART_INTERRUPT_MASK;
	return rc;
}

int chip_uart_int_disable(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	int rc = chip_uart_int_enabled(private_device);
	HWREG(private_device->base_address + UART_O_IM) &= ~UART_INTERRUPT_MASK;
	return rc;
}

int chip_uart_int_enabled(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	int rc = HWREG(private_device->base_address + UART_O_IM) & UART_INTERRUPT_MASK ? 1 : 0;
	return rc;
}

int chip_uart_set_config(void* device,caribou_uart_config_t* config)
{
	unsigned long ulBaud;
	unsigned long ulDiv;
	unsigned long ulUARTClk = chip_clock_freq();
	int rc=(0);
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	if ( !config )
	{
		config = &private_device->config;
	}
	ulBaud = config->baud_rate;
	// Stop the UART.
	chip_uart_disable(device);
	// Is the required baud rate greater than the maximum rate supported
	// without the use of high speed mode?
	if((private_device->base_address * 16) > ulUARTClk)
	{
		// Enable high speed mode.
		HWREG(private_device->base_address + UART_O_CTL) |= UART_CTL_HSE;
		// Half the supplied baud rate to compensate for enabling high speed
		// mode.  This allows the following code to be common to both cases.
		ulBaud /= 2;
	}
	else
	{
		// Disable high speed mode.
		HWREG(private_device->base_address + UART_O_CTL) &= ~(UART_CTL_HSE);
	}
	// Compute the fractional baud rate divider.
	ulDiv = (((ulUARTClk * 8) / ulBaud) + 1) / 2;
	// Set the baud rate.
	HWREG(private_device->base_address + UART_O_IBRD) = ulDiv / 64;
	HWREG(private_device->base_address + UART_O_FBRD) = ulDiv % 64;
	
	// Set the word length...
	HWREG(private_device->base_address + UART_O_LCRH) &= ~(3<<5);
	switch ( config->word_size )
	{
		default:
		case CARIBOU_UART_WORDSIZE_5:				/* Word size 5 bits */
			HWREG(private_device->base_address + UART_O_LCRH) |= (0<<5);
			break;
		case CARIBOU_UART_WORDSIZE_6:				/* Word size 6 bits */
			HWREG(private_device->base_address + UART_O_LCRH) |= (1<<5);
			break;
		case CARIBOU_UART_WORDSIZE_7:				/* Word size 7 bits */
			HWREG(private_device->base_address + UART_O_LCRH) |= (2<<5);
			break;
		case CARIBOU_UART_WORDSIZE_8:				/* Word size 8 bits */
			HWREG(private_device->base_address + UART_O_LCRH) |= (3<<5);
			break;
		case CARIBOU_UART_WORDSIZE_9:				/* Word size 9 bits */		
			HWREG(private_device->base_address + UART_O_LCRH) |= (3<<5);
			break;	
	}

	// Set the stop bits...
	HWREG(private_device->base_address + UART_O_LCRH) &= ~(1<<3);
	switch ( config->stop_bits )
	{
		default:
		case CARIBOU_UART_STOPBITS_05:
		case CARIBOU_UART_STOPBITS_1:
		case CARIBOU_UART_STOPBITS_15:
			/* one stop bit - 0.5 & 1.5 not supported - default */
			break;
		case CARIBOU_UART_STOPBITS_2:
			HWREG(private_device->base_address + UART_O_LCRH) |= (1<<3);
			break;
	}

	// Set the parity...
	HWREG(private_device->base_address + UART_O_LCRH) &= ~(3<<1);
	switch( config->parity_bits )
	{
		default:
		case CARIBOU_UART_PARITY_NONE:
			break;
		case CARIBOU_UART_PARITY_ODD:
			HWREG(private_device->base_address + UART_O_LCRH) |= (1<<1);
			break;
		case CARIBOU_UART_PARITY_EVEN:
			HWREG(private_device->base_address + UART_O_LCRH) |= (3<<1);
			break;
	}

	HWREG(private_device->base_address + UART_O_IFLS) = FIFO_LEVEL_INTS;
	// Clear the flags register.
	HWREG(private_device->base_address + UART_O_FR) = 0;
	caribou_vector_install(private_device->vector,isr_uart,private_device);
	caribou_vector_enable(private_device->vector);
	// Enable receiver interrupts
	HWREG(private_device->base_address + UART_O_IM) |= UART_INTERRUPT_MASK;
	// Start the UART.
    chip_uart_enable(device);

	return rc;
}

bool chip_uart_tx_busy(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	bool rc = (HWREG(private_device->base_address + UART_O_FR) & UART_FR_BUSY) ? true : false;
	return rc;
}

bool chip_uart_tx_ready(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
    bool rc = (HWREG(private_device->base_address + UART_O_FR) & UART_FR_TXFF) ? false : true;
	return rc;
}

bool chip_uart_rx_ready(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	bool rc = (HWREG(private_device->base_address + UART_O_FR) & UART_FR_RXFE) ? false : true;
	return rc;
}

void chip_uart_tx_start(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
    HWREG(private_device->base_address + UART_O_IM) |= UART_INT_TX;
	chip_vector_pend(private_device->vector);
}

void chip_uart_tx_stop(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
    HWREG(private_device->base_address + UART_O_IM) &= ~UART_INT_TX;
	chip_vector_unpend(private_device->vector);
}

void isr_uart(InterruptVector vector,void* arg)
{
	chip_uart_private_t* device = (chip_uart_private_t*)arg; // private device passed as isr argument
	uint32_t status = HWREG(device->base_address + UART_O_MIS);
	HWREG(device->base_address + UART_O_ICR) = status;
	if ( device->vector == vector )
	{
		// Empty out the UART receiver..
		while ( chip_uart_rx_ready(device) )
		{
			if ( !caribou_bytequeue_put(device->rx,chip_uart_rx_data(device) ) )
			{
				device->status |= STDIO_STATE_RX_OVERFLOW;
			}
			device->status |= STDIO_STATE_RX_PENDING;
		}
		// While transmitter empty and tx queue has data, then transmit...
		if ( !caribou_bytequeue_empty(device->tx) )
		{
			// Transmitter shift register is ready?
			if ( chip_uart_tx_ready(device) )
			{
				chip_uart_tx_data(device,caribou_bytequeue_get(device->tx));
			}
			// Disable transmitter empty interrupts so we don't re-enter the interrupt handler.
		}
		if ( caribou_bytequeue_empty(device->tx) )
		{
			chip_uart_tx_stop(device);
		}
	}
}
